--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,25 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hello AngularJS</title>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-  <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
-  <script src="webjars/jquery/2.1.3/jquery.min.js"></script>
-  <script src="webjars/angularjs/1.3.8/angular.js"></script>
-  <script src="webjars/angularjs/1.3.8/angular-route.js"></script>
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>-->
-  <script src="js/financial.js"></script>
-  <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
+    <title>Statictics</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="Bank Statistics Application">
+    <meta name="author" content="Fragkakis Manos">
+
+    <link href="webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
+    <script src="webjars/jquery/2.1.3/jquery.min.js"></script>
+    <script src="webjars/angularjs/1.3.8/angular.js"></script>
+    <script src="webjars/angularjs/1.3.8/angular-route.js"></script>
+    <script src="js/hello.js"></script>
+    <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
 </head>
 
-<body ng-app>
-<div ng-controller="Hello">
-  <p>The ID is {{greeting.id}}</p>
-  <p>The content is {{greeting.content}}</p>
+<body>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+
+        <div class="starter-template">
+            <h1>Starter template</h1>
+
+            <div ng-controller="hello">
+                <p class="lead">The ID is {{greeting.id}}</p>
+
+                <p class="lead">The content is {{greeting.content}}</p>
+            </div>
+        </div>
+
+    </div>
+</nav>
+
+<div class="container">
 </div>
+<!-- /.container -->
 
 <script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="webjars/angularjs/1.3.8/angular-resource.min.js"></script>
