--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,16 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <meta name="description" content="Bank Statistics Application">
     <meta name="author" content="Fragkakis Manos">
 
     <link href="webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/starter.css" rel="stylesheet">
+
     <script src="webjars/jquery/2.1.3/jquery.min.js"></script>
     <script src="webjars/angularjs/1.3.8/angular.js"></script>
     <script src="webjars/angularjs/1.3.8/angular-route.js"></script>
     <script src="js/hello.js"></script>
+
     <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
 </head>
 
@@ -35,27 +37,23 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="tables">Tables</a></li>
+                <li><a href="transaction">Transaction</a></li>
             </ul>
-        </div>
-
-        <div class="starter-template">
-            <h1>Starter template</h1>
-
-            <div ng-controller="hello">
-                <p class="lead">The ID is {{greeting.id}}</p>
-
-                <p class="lead">The content is {{greeting.content}}</p>
-            </div>
         </div>
 
     </div>
 </nav>
 
 <div class="container">
+    <div class="starter-template">
+        <h1>Starter template</h1>
+        <div ng-controller="hello">
+            <p>The ID is {{greeting.id}}</p>
+            <p>The content is {{greeting.content}}</p>
+        </div>
+    </div>
 </div>
-<!-- /.container -->
 
 <script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="webjars/angularjs/1.3.8/angular-resource.min.js"></script>
