--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
     <title>Statictics</title>
     <meta charset="utf-8">
@@ -11,11 +11,17 @@
     <link href="webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/starter.css" rel="stylesheet">
+    <link href="webjars/angular-ui-grid/3.0.6/ui-grid.min.css" rel="stylesheet"/>
 
-    <script src="webjars/jquery/2.1.3/jquery.min.js"></script>
-    <script src="webjars/angularjs/1.3.8/angular.js"></script>
-    <script src="webjars/angularjs/1.3.8/angular-route.js"></script>
-    <script src="js/hello.js"></script>
+    <script src="webjars/jquery/2.1.3/jquery.min.js" rel="script"></script>
+    <script src="webjars/angularjs/1.3.8/angular.js" rel="script"></script>
+    <script src="webjars/angularjs/1.3.8/angular-touch.min.js" rel="script"></script>
+    <script src="webjars/angularjs/1.3.8/angular-animate.min.js" rel="script"></script>
+    <script src="webjars/angularjs/1.3.8/angular-route.js" rel="script"></script>
+    <script src="webjars/angular-ui-grid/3.0.6/ui-grid.js" rel="script"></script>
+
+    <!--<script src="js/hello.js" rel="script"></script>-->
+    <script src="js/app.js" rel="script"></script>
 
     <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
 </head>
@@ -48,9 +54,16 @@
 <div class="container">
     <div class="starter-template">
         <h1>Starter template</h1>
-        <div ng-controller="hello">
-            <p>The ID is {{greeting.id}}</p>
-            <p>The content is {{greeting.content}}</p>
+
+        <div ng-controller="MainCtrl">
+            <p>The ID is {{id}}</p>
+
+            <p>The content is {{content}}</p>
+        </div>
+    </div>
+    <div class="starter-template">
+        <div ng-controller="MainCtrl">
+            <div id="grid1" ui-grid="{ data: myData }" class="grid"></div>
         </div>
     </div>
 </div>
