--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,9 +26,9 @@
     <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
 </head>
 
-<body>
+<body role="document" ng-app="app">
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -38,35 +38,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Bank Stats</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="tables">Tables</a></li>
-                <li><a href="transaction">Transaction</a></li>
+                <li><a href="#/home">Home</a></li>
+                <li><a href="#/transactions">Transactions</a></li>
+                <li><a href="#/statistics">Statistics</a></li>
             </ul>
         </div>
 
     </div>
 </nav>
 
-<div class="container">
-    <div class="starter-template">
-        <h1>Starter template</h1>
-
-        <div ng-controller="MainCtrl">
-            <p>The ID is {{id}}</p>
-
-            <p>The content is {{content}}</p>
-        </div>
-    </div>
-    <div class="starter-template">
-        <div ng-controller="MainCtrl">
-            <div id="grid1" ui-grid="{ data: myData }" class="grid"></div>
-        </div>
-    </div>
-</div>
+<div class="main" ng-view></div>
 
 <script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="webjars/angularjs/1.3.8/angular-resource.min.js"></script>
