--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -1,18 +1,15 @@
 <div class="container" role="main" class="main">
     <div class="starter-template">
         <h1>Starter template</h1>
-
         <div ng-controller="MainCtrl">
             <p>The ID is {{id}}</p>
-
             <p>The content is {{content}}</p>
         </div>
     </div>
     <div class="starter-template">
-        <!--<div ng-controller="MainCtrl">-->
         <div ng-controller="home">
-            <!--<div id="grid1" ui-grid="{ data: myData }" class="grid"></div>-->
-            <div id="grid1" ui-grid="{ transaction: allTransactions }" class="grid"></div>
+            <button type="button" class="btn btn-default" ng-click="bankTransactions()">Load data</button>
+            <div id="grid2" ui-grid="{ data: allTransactions }" class="grid"></div>
         </div>
     </div>
 </div>
