--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 
     <link href="webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="css/starter.css" rel="stylesheet">
+    <link href="styles/starter.css" rel="stylesheet">
     <link href="webjars/angular-ui-grid/3.0.6/ui-grid.min.css" rel="stylesheet"/>
 
     <script src="webjars/jquery/2.1.3/jquery.min.js" rel="script"></script>
@@ -20,9 +20,23 @@
     <script src="webjars/angularjs/1.3.8/angular-route.js" rel="script"></script>
     <script src="webjars/angular-ui-grid/3.0.6/ui-grid.js" rel="script"></script>
 
-    <!--<script src="js/hello.js" rel="script"></script>-->
-    <script src="js/app.js" rel="script"></script>
+    <!--<script src="scripts/bankData.scripts" rel="script"></script>-->
+    <script src="scripts/app.js" rel="2script"></script>
+    <!--<script src="scripts/annyang.min.js"></script>-->
+    <!--<script>-->
+        <!--if (annyang) {-->
+            <!--// Let's define a command.-->
+            <!--var commands = {-->
+                <!--'this is anna': function() { alert('Hello Anna Dimitriadou'); }-->
+            <!--};-->
 
+            <!--// Add our commands to annyang-->
+            <!--annyang.addCommands(commands);-->
+
+            <!--// Start listening.-->
+            <!--annyang.start();-->
+        <!--}-->
+    <!--</script>-->
     <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
 </head>
 
@@ -32,7 +46,7 @@
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
+            aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
