--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,15 +13,8 @@
     <link href="styles/starter.css" rel="stylesheet">
     <link href="webjars/angular-ui-grid/3.0.6/ui-grid.min.css" rel="stylesheet"/>
 
-    <script src="webjars/jquery/2.1.3/jquery.min.js" rel="script"></script>
-    <script src="webjars/angularjs/1.3.8/angular.js" rel="script"></script>
-    <script src="webjars/angularjs/1.3.8/angular-touch.min.js" rel="script"></script>
-    <script src="webjars/angularjs/1.3.8/angular-animate.min.js" rel="script"></script>
-    <script src="webjars/angularjs/1.3.8/angular-route.js" rel="script"></script>
-    <script src="webjars/angular-ui-grid/3.0.6/ui-grid.js" rel="script"></script>
 
     <!--<script src="scripts/bankData.scripts" rel="script"></script>-->
-    <script src="scripts/app.js" rel="2script"></script>
     <!--<script src="scripts/annyang.min.js"></script>-->
     <!--<script>-->
         <!--if (annyang) {-->
@@ -67,8 +60,19 @@
 
 <div class="main" ng-view></div>
 
-<script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="webjars/jquery/2.1.3/jquery.min.js" rel="script"></script>
+<script src="webjars/angularjs/1.3.8/angular.js" rel="script"></script>
+<script src="webjars/angularjs/1.3.8/angular-touch.min.js" rel="script"></script>
+<script src="webjars/angularjs/1.3.8/angular-animate.min.js" rel="script"></script>
 <script src="webjars/angularjs/1.3.8/angular-resource.min.js"></script>
+<script src="webjars/angularjs/1.3.8/angular-route.js" rel="script"></script>
+<script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="webjars/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
+<script src="webjars/angular-ui-grid/3.0.6/ui-grid.js" rel="script"></script>
+
+<script src="scripts/app.js" rel="2script"></script>
+<script src="scripts/controllers/MainCtrl.js" rel="2script"></script>
+<script src="scripts/controllers/home.js" rel="2script"></script>
+<script src="scripts/config/route.js" rel="2script"></script>
 </body>
 </html>
