--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -49,9 +49,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#/home">Home</a></li>
-                <li><a href="#/transactions">Transactions</a></li>
-                <li><a href="#/statistics">Statistics</a></li>
+                <li><a href="#/Home">Home</a></li>
+                <li><a href="#/Transactions">Transactions</a></li>
+                <li><a href="#/Statistics">Statistics</a></li>
             </ul>
         </div>
 
@@ -71,8 +71,8 @@
 <script src="webjars/angular-ui-grid/3.0.6/ui-grid.js" rel="script"></script>
 
 <script src="scripts/app.js" rel="2script"></script>
-<script src="scripts/controllers/MainCtrl.js" rel="2script"></script>
-<script src="scripts/controllers/home.js" rel="2script"></script>
+<script src="scripts/controllers/mainCtrl.js" rel="2script"></script>
+<script src="scripts/controllers/transactions.js" rel="2script"></script>
 <script src="scripts/config/route.js" rel="2script"></script>
 </body>
 </html>
