Monthly Statistics first attempt

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -73,6 +73,7 @@
 <script src="scripts/app.js" rel="2script"></script>
 <script src="scripts/controllers/mainCtrl.js" rel="2script"></script>
 <script src="scripts/controllers/transactions.js" rel="2script"></script>
+<script src="scripts/controllers/statistics.js" rel="2script"></script>
 <script src="scripts/config/route.js" rel="2script"></script>
 </body>
 </html>
