--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,41 +10,27 @@
 
     <link href="webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="styles/starter.css" rel="stylesheet">
     <link href="webjars/angular-ui-grid/3.0.6/ui-grid.min.css" rel="stylesheet"/>
+    <link href="webjars/angular-chart.js/0.8.4/dist/angular-chart.min.css" rel="stylesheet"/>
+    <link href="styles/starter.css" rel="stylesheet">
 
 
-    <!--<script src="scripts/bankData.scripts" rel="script"></script>-->
-    <!--<script src="scripts/annyang.min.js"></script>-->
-    <!--<script>-->
-        <!--if (annyang) {-->
-            <!--// Let's define a command.-->
-            <!--var commands = {-->
-                <!--'this is anna': function() { alert('Hello Anna Dimitriadou'); }-->
-            <!--};-->
-
-            <!--// Add our commands to annyang-->
-            <!--annyang.addCommands(commands);-->
-
-            <!--// Start listening.-->
-            <!--annyang.start();-->
-        <!--}-->
-    <!--</script>-->
     <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body role="document" ng-app="app">
 
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-            aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"-->
+            <!--aria-expanded="false" aria-controls="navbar">-->
+            <!--<span class="sr-only">Toggle navigation</span>-->
+            <!--<span class="icon-bar"></span>-->
+            <!--<span class="icon-bar"></span>-->
+            <!--<span class="icon-bar"></span>-->
+            <!--</button>-->
             <a class="navbar-brand" href="#">Bank Stats</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
@@ -52,7 +38,12 @@
                 <li><a href="#/Home">Home</a></li>
                 <li><a href="#/Transactions">Transactions</a></li>
                 <li><a href="#/Statistics">Statistics</a></li>
+                <li><a href="#/Microphone">Microphone</a></li>
             </ul>
+            <form class="navbar-form navbar-right" ng-controller="VoiceCtrl">
+                <button ng-click="startMic()" class="btn btn-success">Start Mic</button>
+                <button ng-click="stopMic()" class="btn btn-danger">Stop Mic</button>
+            </form>
         </div>
 
     </div>
@@ -60,6 +51,7 @@
 
 <div class="main" ng-view></div>
 
+</body>
 <script src="webjars/jquery/2.1.3/jquery.min.js" rel="script"></script>
 <script src="webjars/angularjs/1.3.8/angular.js" rel="script"></script>
 <script src="webjars/angularjs/1.3.8/angular-touch.min.js" rel="script"></script>
@@ -69,11 +61,17 @@
 <script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="webjars/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
 <script src="webjars/angular-ui-grid/3.0.6/ui-grid.js" rel="script"></script>
+<script src="webjars/Chart.js/1.0.2/Chart.js" rel="script"></script>
+<script src="webjars/angular-chart.js/0.8.4/dist/angular-chart.min.js" rel="script"></script>
+
+<script src="scripts/annyang.min.js"></script>
 
 <script src="scripts/app.js" rel="2script"></script>
+<script src="scripts/config/route.js" rel="2script"></script>
+
 <script src="scripts/controllers/mainCtrl.js" rel="2script"></script>
 <script src="scripts/controllers/transactions.js" rel="2script"></script>
 <script src="scripts/controllers/statistics.js" rel="2script"></script>
-<script src="scripts/config/route.js" rel="2script"></script>
-</body>
+<script src="scripts/controllers/voice.js"></script>
+<script src="scripts/controllers/statistics.js"></script>
 </html>
