--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,20 +24,20 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"-->
-            <!--aria-expanded="false" aria-controls="navbar">-->
-            <!--<span class="sr-only">Toggle navigation</span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--</button>-->
-            <a class="navbar-brand" href="#">Bank Stats</a>
+            <a class="navbar-brand" href="#">My Life Project</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="#/Home">Home</a></li>
-                <li><a href="#/Transactions">Transactions</a></li>
-                <li><a href="#/Statistics">Statistics</a></li>
+                <li class="dropdown open">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="true">Bank Data <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#/Transactions">Transactions</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#/Statistics">Statistics</a></li>
+                    </ul>
+                </li>
                 <li><a href="#/Microphone">Microphone</a></li>
             </ul>
             <form class="navbar-form navbar-right" ng-controller="VoiceCtrl">
