Smart table support on transactions page, with filtering

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,6 @@
     <link href="webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="webjars/angular-ui-grid/3.0.6/ui-grid.min.css" rel="stylesheet"/>
-    <link href="webjars/angular-chart.js/0.8.4/dist/angular-chart.min.css" rel="stylesheet"/>
     <link href="styles/starter.css" rel="stylesheet">
 
 
@@ -61,8 +60,7 @@
 <script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="webjars/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
 <script src="webjars/angular-ui-grid/3.0.6/ui-grid.js" rel="script"></script>
-<script src="webjars/Chart.js/1.0.2/Chart.js" rel="script"></script>
-<script src="webjars/angular-chart.js/0.8.4/dist/angular-chart.min.js" rel="script"></script>
+<script src="webjars/smart-table/2.1.3-1/smart-table.js"></script>
 
 <script src="scripts/annyang.min.js"></script>
 
