Dropdown hidden on top menu

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,7 +28,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="#/Home">Home</a></li>
-                <li class="dropdown open">
+                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="true">Bank Data <span class="caret"></span></a>
                     <ul class="dropdown-menu">
