Improve search on statistics page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -67,6 +67,8 @@
 <script src="scripts/app.js" rel="2script"></script>
 <script src="scripts/config/route.js" rel="2script"></script>
 
+<script src="scripts/services/monthlyIncomeService.js" rel="2script"></script>
+
 <script src="scripts/controllers/mainCtrl.js" rel="2script"></script>
 <script src="scripts/controllers/transactions.js" rel="2script"></script>
 <script src="scripts/controllers/statistics.js" rel="2script"></script>
