--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,13 @@
 
     <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800,700' rel='stylesheet' type='text/css'>
+
+    <style>
+        .my-drop-zone { border: dotted 3px lightgray; }
+        .nv-file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
+        .another-file-over-class { border: dotted 3px green; }
+        html, body { height: 100%; }
+    </style>
 </head>
 
 <body role="document" ng-app="app">
@@ -23,15 +30,17 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">My Life Project</a>
+            <a class="navbar-brand" href="#">TDD Project</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="#/Home">Home</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="true">Bank Data <span class="caret"></span></a>
+                       aria-expanded="true">Bank<span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="#/Upload">Data Upload</a></li>
+                        <li role="separator" class="divider"></li>
                         <li><a href="#/Transactions">Transactions</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#/Statistics">Statistics</a></li>
@@ -61,6 +70,7 @@
 <script src="webjars/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
 <script src="webjars/angular-ui-grid/3.0.6/ui-grid.js" rel="script"></script>
 <script src="webjars/smart-table/2.1.3-1/smart-table.js"></script>
+<script src="webjars/nervgh-angular-file-upload/2.1.1/angular-file-upload.min.js"></script>
 
 <script src="scripts/annyang.min.js"></script>
 
@@ -70,6 +80,7 @@
 <script src="scripts/controllers/mainCtrl.js" rel="2script"></script>
 <script src="scripts/controllers/transactions.js" rel="2script"></script>
 <script src="scripts/controllers/statistics.js" rel="2script"></script>
-<script src="scripts/controllers/voice.js"></script>
-<script src="scripts/controllers/statistics.js"></script>
+<script src="scripts/controllers/voice.js" rel="2script"></script>
+<script src="scripts/controllers/statistics.js" rel="2script"></script>
+<script src="scripts/controllers/upload.js" rel="2script"></script>
 </html>
