--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 
     <link href="webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="webjars/angular-ui-grid/3.0.6/ui-grid.min.css" rel="stylesheet"/>
+    <link href="webjars/angular-ui-grid/3.1.1/ui-grid.min.css" rel="stylesheet"/>
     <link href="styles/starter.css" rel="stylesheet">
 
 
@@ -68,7 +68,7 @@
 <script src="webjars/angularjs/1.4.9/angular-route.js" rel="script"></script>
 <script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="webjars/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
-<script src="webjars/angular-ui-grid/3.0.6/ui-grid.js" rel="script"></script>
+<script src="webjars/angular-ui-grid/3.1.1/ui-grid.min.js" rel="script"></script>
 <script src="webjars/smart-table/2.1.3-1/smart-table.js"></script>
 <script src="webjars/nervgh-angular-file-upload/2.1.1/angular-file-upload.min.js"></script>
 
@@ -76,7 +76,7 @@
 
 <script src="scripts/app.js" rel="2script"></script>
 <script src="scripts/config/route.js" rel="2script"></script>
-
+§
 <script src="scripts/controllers/mainCtrl.js" rel="2script"></script>
 <script src="scripts/controllers/transactions.js" rel="2script"></script>
 <script src="scripts/controllers/statistics.js" rel="2script"></script>
