--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
 <head>
-    <title>Statictics</title>
+    <title>LifeInOrder</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">TDD Project</a>
+            <a class="navbar-brand" href="#"><LifeInOrder></LifeInOrder></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -76,7 +76,7 @@
 
 <script src="scripts/app.js" rel="2script"></script>
 <script src="scripts/config/route.js" rel="2script"></script>
-§
+
 <script src="scripts/controllers/mainCtrl.js" rel="2script"></script>
 <script src="scripts/controllers/transactions.js" rel="2script"></script>
 <script src="scripts/controllers/statistics.js" rel="2script"></script>
