--- a/webApp/src/main/resources/static/index.html
+++ b/webApp/src/main/resources/static/index.html
@@ -12,6 +12,8 @@
     <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="webjars/angular-ui-grid/3.1.1/ui-grid.min.css" rel="stylesheet"/>
     <link href="styles/starter.css" rel="stylesheet">
+    <link href="webjars/ng-tags-input/2.3.0/ng-tags-input.bootstrap.min.css" rel="stylesheet">
+    <link href="webjars/ng-tags-input/2.3.0/ng-tags-input.min.css" rel="stylesheet">
 
 
     <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
@@ -71,6 +73,7 @@
 <script src="webjars/angular-ui-grid/3.1.1/ui-grid.min.js" rel="script"></script>
 <script src="webjars/smart-table/2.1.3-1/smart-table.js"></script>
 <script src="webjars/nervgh-angular-file-upload/2.1.1/angular-file-upload.min.js"></script>
+<script src="webjars/ng-tags-input/2.3.0/ng-tags-input.min.js"></script>
 
 <script src="scripts/annyang.min.js"></script>
 
