--- a/webApp/src/main/resources/static/index.html
+++ b/webApp/src/main/resources/static/index.html
@@ -12,8 +12,8 @@
     <link href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="webjars/angular-ui-grid/3.1.1/ui-grid.min.css" rel="stylesheet"/>
     <link href="styles/starter.css" rel="stylesheet">
-    <link href="webjars/ng-tags-input/2.3.0/ng-tags-input.bootstrap.min.css" rel="stylesheet">
     <link href="webjars/ng-tags-input/2.3.0/ng-tags-input.min.css" rel="stylesheet">
+    <link href="styles/tags.css" rel="stylesheet">
 
 
     <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico"/>
@@ -69,7 +69,7 @@
 <script src="webjars/angularjs/1.4.9/angular-resource.min.js"></script>
 <script src="webjars/angularjs/1.4.9/angular-route.js" rel="script"></script>
 <script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="webjars/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
+<script src="webjars/angular-ui-bootstrap/1.3.3/ui-bootstrap-tpls.min.js"></script>
 <script src="webjars/angular-ui-grid/3.1.1/ui-grid.min.js" rel="script"></script>
 <script src="webjars/smart-table/2.1.3-1/smart-table.js"></script>
 <script src="webjars/nervgh-angular-file-upload/2.1.1/angular-file-upload.min.js"></script>
@@ -86,4 +86,8 @@
 <script src="scripts/controllers/voice.js" rel="2script"></script>
 <script src="scripts/controllers/statistics.js" rel="2script"></script>
 <script src="scripts/controllers/upload.js" rel="2script"></script>
+
+<script src="scripts/services/TagService.js" rel="2script"></script>
+<script src="scripts/services/BankService.js" rel="2script"></script>
+
 </html>
