Fix for overlapping fixed navbar.

--- a/webApp/src/main/resources/static/index.html
+++ b/webApp/src/main/resources/static/index.html
@@ -20,10 +20,9 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800,700' rel='stylesheet' type='text/css'>
 
     <style>
-        .my-drop-zone { border: dotted 3px lightgray; }
-        .nv-file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
-        .another-file-over-class { border: dotted 3px green; }
-        html, body { height: 100%; }
+        html, body {
+            height: 100%;
+            padding: 40px; }
     </style>
 </head>
 
