#2 Show tagged and untagged transactions

--- a/webApp/src/main/resources/static/index.html
+++ b/webApp/src/main/resources/static/index.html
@@ -88,5 +88,6 @@
 
 <script src="scripts/services/TagService.js" rel="2script"></script>
 <script src="scripts/services/BankService.js" rel="2script"></script>
+<script src="scripts/services/StatisticsService.js" rel="2script"></script>
 
 </html>
